# stashee-terminal

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  justfile
.forgejo/workflows/: github-sync.yml  publish.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  config.yml
.github/workflows/: aur.yml  ci.yml  release.yml
.playwright-mcp/: page-2026-07-05T23-02-33-921Z.yml
crates/stashee/: Cargo.toml
crates/stashee-core/: Cargo.toml
crates/stashee-core/src/: config.rs  layout.rs  lib.rs  model.rs  osc52.rs  ssh.rs  state.rs  tmux.rs
crates/stashee-pty/: Cargo.toml
crates/stashee-pty/src/: lib.rs
crates/stashee-voice/: Cargo.toml
crates/stashee-voice/examples/: transcribe.rs
crates/stashee-voice/src/: lib.rs  model.rs  parakeet.rs  stt.rs
crates/stashee/data/: dev.stashee.Terminal.desktop  dev.stashee.Terminal.metainfo.xml  style.css  tmux.conf
crates/stashee/src/: cli.rs  clipboard.rs  dnd.rs  grid.rs  keys.rs  main.rs  pane.rs  paths.rs  proxy.rs  settings.rs  shortcuts.rs  sidebar.rs  voice.rs  window.rs
docs/: config.toml.example
packaging/: PKGBUILD  stashee.spec
packaging/aur/: .SRCINFO  PKGBUILD
packaging/copr/: stashee.spec
scripts/: release.sh
