[workspace]
resolver = "3"
members = [
    "crates/stashee-core",
    "crates/stashee-pty",
    "crates/stashee-voice",
    "crates/stashee",
]

[workspace.package]
version = "0.1.18"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.9"
fastrand = "2"
tracing = "0.1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
dbg_macro = "deny"
todo = "deny"
